--- a/static/splitpanel.css
+++ b/static/splitpanel.css
@@ -34,15 +34,6 @@
     cursor: ns-resize;
     }
 
-.splitting {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    }
-
-.splitting iframe {
-    pointer-events: none;
-    }
-
 .splitstretch {
     flex: 1;
     }
@@ -50,3 +41,28 @@
 .splitpanel-h > .splitfix {
     width: 250px;
     }
+
+
+.shield {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+}
+
+
+.splitting {
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+    }
+
+.splitting iframe {
+    pointer-events: none;
+    }
+
+.splitting .shield {
+    display: block;
+}
