--- a/static/layout.css
+++ b/static/layout.css
@@ -89,8 +89,47 @@ body {
     }
 
 
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-    opacity: .7;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+
+sub[class^="icon-"],
+sub[class*=" icon-"] {
+    vertical-align: baseline;
+    position: relative;
+    bottom:
+    }
+
+sub[class^="icon-"]:before,
+sub[class*=" icon-"]:before {
+    background-color: purple;
+    border-radius: 50%;
+    margin-left: -1em;
     }
