--- a/static/fontello/css/fontello.css
+++ b/static/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?9401859');
-  src: url('../font/fontello.eot?9401859#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?9401859') format('woff'),
-       url('../font/fontello.ttf?9401859') format('truetype'),
-       url('../font/fontello.svg?9401859#fontello') format('svg');
+  src: url('../font/fontello.eot?5179549');
+  src: url('../font/fontello.eot?5179549#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?5179549') format('woff'),
+       url('../font/fontello.ttf?5179549') format('truetype'),
+       url('../font/fontello.svg?5179549#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?9401859#fontello') format('svg');
+    src: url('../font/fontello.svg?5179549#fontello') format('svg');
   }
 }
 */
@@ -51,16 +51,11 @@
 }
  
 .icon-table:before { content: '\e800'; } /* '' */
-.icon-indent-left:before { content: '\e804'; } /* '' */
-.icon-doc-text-1:before { content: '\e80d'; } /* '' */
-.icon-publish:before { content: '\e802'; } /* '' */
+.icon-column:before { content: '\e80d'; } /* '' */
 .icon-database:before { content: '\e801'; } /* '' */
 .icon-forward:before { content: '\e809'; } /* '' */
 .icon-code:before { content: '\e80b'; } /* '' */
-.icon-briefcase:before { content: '\e80c'; } /* '' */
-.icon-popup:before { content: '\e806'; } /* '' */
-.icon-export:before { content: '\e805'; } /* '' */
-.icon-play:before { content: '\e808'; } /* '' */
-.icon-buffer:before { content: '\e803'; } /* '' */
-.icon-location:before { content: '\e80a'; } /* '' */
-.icon-resize-normal-outline:before { content: '\e807'; } /* '' */
+.icon-schema:before { content: '\e806'; } /* '' */
+.icon-extension:before { content: '\e808'; } /* '' */
+.icon-key:before { content: '\e80c'; } /* '' */
+.icon-uniqkey:before { content: '\e80a'; } /* '' */
