--- a/static/layout.css
+++ b/static/layout.css
@@ -88,3 +88,47 @@ body {
     padding: 0;
     }
 
+.code-form {
+    position: relative;
+    }
+
+.spinner-shield.visible {
+    visibility: visible;
+    opacity: 1;
+    }
+
+.spinner-shield {
+    visibility: hidden;
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,.5);
+    opacity: 0;
+    -webkit-transition: opacity .5s;
+    }
+
+.spinner-shield::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -.5em;
+    margin-left: -.5em;
+    font-size: 40px;
+    width: 1em;
+    height: 1em;
+    opacity: .5;
+    border: .2em solid white;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-radius: 50%;
+    -webkit-transform-origin: center center;
+       -moz-transform-origin: center center;
+        -ms-transform-origin: center center;
+    -webkit-animation: spin 1s infinite linear;
+       -moz-animation: spin 1s infinite linear;
+        -ms-animation: spin 1s infinite linear;
+    }
