--- a/static/sidebar.css
+++ b/static/sidebar.css
@@ -1,5 +1,3 @@
-@import url('fontello/css/fontello.css');
-
 .tree-node-list {
     padding: 0;
     margin: 0;
@@ -24,7 +22,8 @@
     height: 1em;
     opacity: 0.5;
     user-select: none;
-    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
     }
 
 .tree-node-toggler_expanded,
@@ -84,24 +83,19 @@
     opacity: .7;
     }
 
-.tree-node-link:hover {
-    background-color: rgba(0,0,0,.1);
-    /*outline: thin solid rgba(0,0,0,.3);*/
-    }
-
 @-webkit-keyframes spin {
     from { -webkit-transform: rotate(0deg); }
-    to { -webkit-transform: rotate(360deg); }
+    to   { -webkit-transform: rotate(360deg); }
     }
 
 @-moz-keyframes spin {
     from { -moz-transform: rotate(0deg); }
-    to { -moz-transform: rotate(360deg); }
+    to   { -moz-transform: rotate(360deg); }
     }
 
 @-ms-keyframes spin {
     from { -ms-transform: rotate(0deg); }
-    to { -ms-transform: rotate(360deg); }
+    to   { -ms-transform: rotate(360deg); }
     }
 
 
@@ -196,3 +190,41 @@
 .tree-node-icon[data-type=fk_column]::before {
     content: '\e80c';
 }
+
+
+
+
+.queries {
+    margin-bottom: 1em;
+    padding-left: 1em;
+    }
+
+.queries-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    line-height: 1.5em;
+    }
+
+.queries-item {
+    display: flex;
+    align-items: center;
+    }
+
+.queries-item .action {
+    display: none;
+    }
+
+.queries-item:hover .action {
+    display: block;
+    }
+
+.queries-item-name {
+    flex: 1;
+    color: inherit;
+    display: block;
+    text-decoration: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    }
