--- a/pgblackboard/static/table/table.css
+++ b/pgblackboard/static/table/table.css
@@ -100,6 +100,28 @@ td + td:empty::before {
     background-color: #551414;
 }
 
+.submitting-row {
+    -webkit-animation: 'move-stripes' .2s linear infinite;
+    background-size: 1em 100%;
+    background-image: -webkit-linear-gradient(45deg
+                        ,rgba(0,0,0, 0)   0
+                        ,rgba(0,0,0, 0)  20%
+                        ,rgba(0,0,0,.1)  20%
+                        ,rgba(0,0,0,.1)  40%
+                        ,rgba(0,0,0, 0)  40%
+                        ,rgba(0,0,0, 0)  60%
+                        ,rgba(0,0,0,.1)  60%
+                        ,rgba(0,0,0,.1)  80%
+                        ,rgba(0,0,0, 0)  80%
+                        ,rgba(0,0,0, 0) 100%);
+
+}
+
+@-webkit-keyframes move-stripes {
+      0% { background-position: 0 0; }
+    100% { background-position: 1em 0; }
+}
+
 
 p.non-query-result,
 .error {
