--- a/pgblackboard/static/table.css
+++ b/pgblackboard/static/table.css
@@ -69,6 +69,15 @@
     color: #aaa;
     }
 
+html {
+    scrollbar-base-color: #333;
+    scrollbar-3dlight-color: #222;
+    scrollbar-highlight-color: #222;
+    scrollbar-track-color: #222;
+    scrollbar-arrow-color: #888;
+    scrollbar-shadow-color: #222;
+    scrollbar-dark-shadow-color: #222;
+    }
 
 html, body {
     margin: 0;
