--- a/pgblackboard/static/table.css
+++ b/pgblackboard/static/table.css
@@ -1,74 +1,3 @@
-.rowset td,
-.rowset th {
-    border: 1px solid #555;
-    padding: .2em;
-    }
-
-/* 6em width for all columns except row number */
-.rowset th + th {
-    width: 6em;
-    }
-
-.coltype {
-    color: #aaa;
-    text-transform: uppercase;
-    display: block;
-    font-size: .5em;
-    }
-
-.rowset td {
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    max-width: 50em;
-    vertical-align: top;
-    }
-
-/* expand cell content on focus */
-.rowset td:focus {
-    white-space: pre;
-    overflow-wrap: break-word;
-    }
-
-/* row number */
-.rowset th:first-child::before {
-    content: '#';
-    }
-
-.rowset td:first-child {
-    text-align: right;
-    background-color: #444;
-    font-weight: bold;
-    }
-
-.rowset td:first-child::before {
-    counter-increment: rownum;
-    content: counter(rownum);
-    }
-
-.rowset {
-    border-collapse: collapse;
-    white-space: nowrap;
-    margin: 0;
-    margin-bottom: 1em;
-    padding: 0;
-
-    }
-
-.rowset tbody {
-    counter-reset: rownum;
-    }
-
-
-.rowset th {
-    background-color: #444;
-    }
-
-
-
-.rowset tr:nth-child(even) {
-    color: #aaa;
-    }
-
 html {
     scrollbar-base-color: #333;
     scrollbar-3dlight-color: #222;
@@ -79,43 +8,207 @@ html {
     scrollbar-dark-shadow-color: #222;
     }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    }
-
-
-
 body {
-    font-family: sans-serif;
     color: #ddd;
     background-color: #272822;
     }
 
-.rowset td + td:empty::before {
+.rowset {
+    border-color: #555;
+    }
+
+.rowset th {
+    background-color: #444;
+    }
+
+/* make table stripped */
+.rowset tr:nth-child(even) {
+    color: #aaa;
+    }
+
+.rowset-invalid-row td {
+    background-color: #551414;
+}
+
+.message-error {
+    color: #ff4c4c; /* red */
+    }
+
+.message {
+    border-bottom-color: #333;
+    }
+
+
+
+
+
+
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    }
+
+
+.message {
+    padding: .3rem .5rem .3rem .5rem;
+    font-size: .8rem;
+    font-weight: bold;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    }
+
+.message-error {
+    white-space: pre;
+    }
+
+
+.rowset {
+    border-collapse: collapse;
+    white-space: nowrap;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 1em;
+    }
+
+.rowset td,
+.rowset th {
+    border: 1px solid;
+    padding: .2em;
+    border-color: inherit;
+    }
+
+/* truncate long cells */
+.rowset td {
+    max-width: 50em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    }
+
+/* expand cell content on focus */
+.rowset td:focus {
+    white-space: pre;
+    overflow-wrap: break-word;
+    }
+
+/* .rowset-colheader is all TH except row number */
+.rowset-colheader {
+    width: 6em;
+    }
+
+/*  --------------
+    | COLNAME |
+    | coltype |
+    --------------
+    |         |      */
+.rowset-coltype {
+    display: block;
+    opacity: .5;
+    font-size: .5em;
+    text-transform: uppercase;
+    }
+
+
+
+
+/* row number */
+.rowset-rowheader::before {
+    content: '#';
+    }
+.rowset > tbody th {
+    text-align: right;
+    font-weight: bold;
+    }
+.rowset > tbody th::before {
+    counter-increment: rownum;
+    content: counter(rownum);
+    }
+.rowset > tbody {
+    counter-reset: rownum;
+    }
+.rowset-has-blankrow > tbody > tr:last-child > th::before {
+    content: '*';
+    }
+
+/* empty TD are nulls */
+.rowset td:empty::before {
     content: 'null';
     color: #888;
     font-style: italic;
     font-size: smaller;
     }
 
-
-.has-blankrow > tr:last-child > td {
-    border-color: #333;
+.rowset td.emptystr::before {
+    content: 'empty string';
     }
 
-.has-blankrow > tr:last-child > td:first-child::before {
-    content: '*';
+/* make blank row semiopaque like a ghost */
+.rowset-has-blankrow > tbody > tr:last-child {
+    opacity: .5;
     }
 
-.invalid-row td {
-    background-color: #551414;
-}
 
-.submitting-row {
+
+
+
+.rowset-submitting-row {
     -webkit-animation: 'move-stripes' .2s linear infinite;
+       -moz-animation: 'move-stripes' .2s linear infinite;
+        -ms-animation: 'move-stripes' .2s linear infinite;
+         -o-animation: 'move-stripes' .2s linear infinite;
+            animation: 'move-stripes' .2s linear infinite;
+
     background-size: 1em 100%;
+
     background-image: -webkit-linear-gradient(45deg
+                        ,rgba(0,0,0, 0)   0
+                        ,rgba(0,0,0, 0)  20%
+                        ,rgba(0,0,0,.1)  20%
+                        ,rgba(0,0,0,.1)  40%
+                        ,rgba(0,0,0, 0)  40%
+                        ,rgba(0,0,0, 0)  60%
+                        ,rgba(0,0,0,.1)  60%
+                        ,rgba(0,0,0,.1)  80%
+                        ,rgba(0,0,0, 0)  80%
+                        ,rgba(0,0,0, 0) 100%);
+
+    background-image: -moz-linear-gradient(45deg
+                        ,rgba(0,0,0, 0)   0
+                        ,rgba(0,0,0, 0)  20%
+                        ,rgba(0,0,0,.1)  20%
+                        ,rgba(0,0,0,.1)  40%
+                        ,rgba(0,0,0, 0)  40%
+                        ,rgba(0,0,0, 0)  60%
+                        ,rgba(0,0,0,.1)  60%
+                        ,rgba(0,0,0,.1)  80%
+                        ,rgba(0,0,0, 0)  80%
+                        ,rgba(0,0,0, 0) 100%);
+
+    background-image: -ms-linear-gradient(45deg
+                        ,rgba(0,0,0, 0)   0
+                        ,rgba(0,0,0, 0)  20%
+                        ,rgba(0,0,0,.1)  20%
+                        ,rgba(0,0,0,.1)  40%
+                        ,rgba(0,0,0, 0)  40%
+                        ,rgba(0,0,0, 0)  60%
+                        ,rgba(0,0,0,.1)  60%
+                        ,rgba(0,0,0,.1)  80%
+                        ,rgba(0,0,0, 0)  80%
+                        ,rgba(0,0,0, 0) 100%);
+
+    background-image: -o-linear-gradient(45deg
+                        ,rgba(0,0,0, 0)   0
+                        ,rgba(0,0,0, 0)  20%
+                        ,rgba(0,0,0,.1)  20%
+                        ,rgba(0,0,0,.1)  40%
+                        ,rgba(0,0,0, 0)  40%
+                        ,rgba(0,0,0, 0)  60%
+                        ,rgba(0,0,0,.1)  60%
+                        ,rgba(0,0,0,.1)  80%
+                        ,rgba(0,0,0, 0)  80%
+                        ,rgba(0,0,0, 0) 100%);
+
+    background-image: linear-gradient(45deg
                         ,rgba(0,0,0, 0)   0
                         ,rgba(0,0,0, 0)  20%
                         ,rgba(0,0,0,.1)  20%
@@ -132,20 +225,31 @@ body {
 @-webkit-keyframes move-stripes {
       0% { background-position: 0 0; }
     100% { background-position: 1em 0; }
-}
-
-
-p.non-query-result,
-.error {
-    padding: .3rem .5rem .3rem .5rem;
-    font-size: .8rem;
-    font-weight: bold;
-    border-bottom: 1px solid #333;
     }
 
-.error {
-    color: #ff4c4c;
+@-moz-keyframes move-stripes {
+      0% { background-position: 0 0; }
+    100% { background-position: 1em 0; }
     }
+
+@-ms-keyframes move-stripes {
+      0% { background-position: 0 0; }
+    100% { background-position: 1em 0; }
+    }
+
+@-o-keyframes move-stripes {
+      0% { background-position: 0 0; }
+    100% { background-position: 1em 0; }
+    }
+
+@keyframes move-stripes {
+      0% { background-position: 0 0; }
+    100% { background-position: 1em 0; }
+    }
+
+
+
+
 
 
 
